samples/_failures_safe/1761642179_fac3a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4faf9dea.c: In function ‘main’:
./samples/SAFE/__tmp_4faf9dea.c:157:20: error: missing terminating " character
  157 |             printf("[%
      |                    ^~~
./samples/SAFE/__tmp_4faf9dea.c:157:13: error: expected expression at end of input
  157 |             printf("[%
      |             ^~~~~~
./samples/SAFE/__tmp_4faf9dea.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4faf9dea.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4faf9dea.c:157:13: error: expected declaration or statement at end of input
